objects/HCR_Plan_Grids__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Determination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Determination_By__c</fullName>
        <label>Determination By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCR_Plan_Status__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCR Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCR_Status__c</fullName>
        <label>HCR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Grandfathered</fullName>
                    <default>true</default>
                    <label>Non-Grandfathered</label>
                </value>
                <value>
                    <fullName>Grandfathered</fullName>
                </value>
                <value>
                    <fullName>Grandfathered - Zero Enrollment</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCR</label>
        <referenceTo>HCR__c</referenceTo>
        <relationshipLabel>HCR Plan Grids</relationshipLabel>
        <relationshipName>HCR_Plan_Grids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impacted_Packages_Suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Packages / Contract Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Number__c</fullName>
        <label>Plan Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>HCR Plan Grids</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HCRPG-{000}</displayFormat>
        <label>HCR Plan Grid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCR Plan Grids</pluralLabel>
    <recordTypes>
        <fullName>Exempt</fullName>
        <active>true</active>
        <label>Exempt</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grandfathered</fullName>
        <active>true</active>
        <label>Grandfathered</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grandfathered_Zero_Enrollment</fullName>
        <active>true</active>
        <label>Grandfathered - Zero Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Grandfathered</fullName>
        <active>true</active>
        <label>Non-Grandfathered</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>